Adding POST, PUT and DELETE to exercise recommendations
